rating logic added